# boleto

./: .gitignore  DEVPOST.md  LICENSE  README.md  SETUP.md  htr_harness.py  pyproject.toml  tradeoffs.md  wage_engine.py
.github/workflows/: ci.yml
app/: mock_contracts.py  mock_eval_report.json  real_contracts.py  server.py  test_f4_invariant.py
app/static/: app.js  strings.json  style.css
app/templates/: index.html
core/: contracts.py  error_budget.py  model_client.py
core/extraction/: schema.json
core/wage_engine/: __init__.py  config.py  golden_cases.json  history.py  minimum_wage.json  session_audit.py  test_ws_b.py  wage_engine.py
demo_session/: build.py  real_session.json  receipt.json  run_demo.sh  session.json  session_mismatch.json
evals/: config_sweep.py  gen_train_set.py  generator.py  human_baseline.py  metrics.py  pipeline.py  run_eval.py  test_evals.py
evals/prompts/: ticket_whole.txt
evals/results/: WS-C-RESULTS.md  config_sweep_2026-07-19_e4b.json  config_sweep_2026-07-19_e4b.md  config_sweep_2026-07-19_e4b_hand.json  config_sweep_2026-07-19_e4b_hand.md  config_sweep_2026-07-19_e4b_hand_adapter.json  config_sweep_2026-07-19_e4b_hand_adapter.md  eval_2026-07-19_gemma3-latest_real.json  eval_2026-07-19_gemma3-latest_real_ws-a.json  eval_log.md  (+4 more)
extraction/: __init__.py  __main__.py  pipeline.py  test_pipeline.py
results/: FINAL-REPORT.md  WS-A-RESULTS.md  WS-B-RESULTS.md  WS-D-RESULTS.md  WS-E-RESULTS.md  WS-F-codereview.md  WS-F-critic.md  WS-F-remediation.md  WS-F-security.md
tests/: test_wsf_remediation.py
tickets/: truth.json
(+11 files in other folders)
