[project]
name = "boleto"
version = "0.1.0"
description = "On-device wage-audit system for CA piece-rate farmworkers. The AI drafts; the human decides."
requires-python = ">=3.12"
dependencies = [
    "pillow>=10",
    "numpy>=1.26",
    "imagehash>=4.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "hypothesis>=6.100",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["wage_engine"]

[tool.setuptools.packages.find]
include = ["core*", "app*", "evals*", "extraction*"]

[tool.pytest.ini_options]
testpaths = ["core", "extraction", "evals", "app", "tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
